添加枚举帮助类

--- a/HCommon/HCommon.csproj
+++ b/HCommon/HCommon.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Cache\CacheHelper.cs" />
     <Compile Include="Cache\CacheModel.cs" />
     <Compile Include="Helper\EncryptionHelper.cs" />
+    <Compile Include="Helper\EnumHelper.cs" />
     <Compile Include="Helper\EventHelper.cs" />
     <Compile Include="Helper\JsonHelper.cs" />
     <Compile Include="Helper\LogHelper.cs" />
