--- a/HCommon/HFrame.Common.csproj
+++ b/HCommon/HFrame.Common.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{C025578C-464E-46E3-A0B7-FD3C85A8E77C}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>HCommon</RootNamespace>
-    <AssemblyName>HCommon</AssemblyName>
+    <RootNamespace>HFrame.Common</RootNamespace>
+    <AssemblyName>HFrame.Common</AssemblyName>
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
