--- a/HFrame.Web/HFrame.Web.csproj
+++ b/HFrame.Web/HFrame.Web.csproj
@@ -160,12 +160,12 @@
       <DependentUpon>HFrameDb.mdf</DependentUpon>
     </Content>
     <Content Include="App_Data\DataBase\HFrameDb.mdf" />
-    <Content Include="Content\Plugin\HFrameCommon\common.js" />
+    <Content Include="Content\Plugin\HFrameJs\common.js" />
     <Content Include="Content\Plugin\bootstrap\css\bootstrap.css" />
     <Content Include="Content\Plugin\bootstrap\css\bootstrap.min.css" />
     <Content Include="Content\Plugin\bootstrap\js\bootstrap.js" />
     <Content Include="Content\Plugin\bootstrap\js\bootstrap.min.js" />
-    <Content Include="Content\Plugin\HFrameCommon\module\Http.js" />
+    <Content Include="Content\Plugin\HFrameJs\module\Http.js" />
     <Content Include="Content\Plugin\Jquery\jquery-3.3.1.js" />
     <Content Include="Content\Plugin\Jquery\jquery-3.3.1.min.js" />
     <Content Include="Content\Plugin\layer\layer.js" />
