--- a/HFrame.Web/HFrame.Web.csproj
+++ b/HFrame.Web/HFrame.Web.csproj
@@ -318,6 +318,10 @@
       <Project>{c025578c-464e-46e3-a0b7-fd3c85a8e77c}</Project>
       <Name>HFrame.Common</Name>
     </ProjectReference>
+    <ProjectReference Include="..\HFrame.DAL\HFrame.DAL.csproj">
+      <Project>{396dfa0b-a6ec-4e45-a833-bd47080810e5}</Project>
+      <Name>HFrame.DAL</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
