--- a/HFrame.DAL/HFrame.DAL.csproj
+++ b/HFrame.DAL/HFrame.DAL.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Data_User.cs" />
     <Compile Include="DbBase.cs" />
     <Compile Include="DBSqlHelper.cs" />
+    <Compile Include="DBTablePropertie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
