--- a/HFrame.DAL/HFrame.DAL.csproj
+++ b/HFrame.DAL/HFrame.DAL.csproj
@@ -59,5 +59,8 @@
       <Name>HFrame.DB</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="WHERE\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
