--- a/HFrame.Web/HFrame.Web.csproj
+++ b/HFrame.Web/HFrame.Web.csproj
@@ -148,6 +148,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\Default\DefaultController.cs" />
+    <Compile Include="Controllers\Default\Model\LoginModel.cs" />
     <Compile Include="Controllers\Default\Model\RegisterModel.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
