新增删除更新

--- a/HFrame.DAL/HFrame.DAL.csproj
+++ b/HFrame.DAL/HFrame.DAL.csproj
@@ -34,9 +34,6 @@
     <Reference Include="Dapper, Version=1.50.5.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Dapper.1.50.5\lib\net451\Dapper.dll</HintPath>
     </Reference>
-    <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\LambdaToSql.3.1.0\lib\Newtonsoft.Json.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
@@ -57,11 +54,17 @@
     <Compile Include="DbBase.cs" />
     <Compile Include="DBSqlHelper.cs" />
     <Compile Include="DBTablePropertie.cs" />
+    <Compile Include="LambdaHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\HFrame.Common\HFrame.Common.csproj">
+      <Project>{C025578C-464E-46E3-A0B7-FD3C85A8E77C}</Project>
+      <Name>HFrame.Common</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
