添加测试项目

--- a/HFrame.Common/HFrame.Common.csproj
+++ b/HFrame.Common/HFrame.Common.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Helper\EncryptionHelper.cs" />
     <Compile Include="Helper\EnumHelper.cs" />
     <Compile Include="Helper\EventHelper.cs" />
+    <Compile Include="Helper\HttpHelper.cs" />
     <Compile Include="Helper\JsonHelper.cs" />
     <Compile Include="Helper\LogHelper.cs" />
     <Compile Include="Cache\RedisHelper.cs" />
